<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">dynprovider</string>
    <string name="hello_world">Hello dynamic provider world!</string>
    <string name="action_settings">Settings</string>	
	<string name="read_all">Read All</string>
	<string name="write">insert</string>	
	<string name="message_hint">message</string>	
	<string name="hint_id">id</string>
	<string name="update">update</string>
	<string name="delete">delete</string>
	<string name="read_one">read</string>
	
</resources>
